[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-openai = "0.27.2"
futures = "0.3.31"
itertools = "0.14.0"
schemars = "0.8.21"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
xdg = "2.5.2"
